@@ -2,6 +2,7 @@ Changes between 1.4.6 and NEXT
 ==================================================
 
 - fix issue11 - own test failure with python3.3 / Thanks Benjamin Peterson
+- help fix pytest issue 102
 
 Changes between 1.4.5 and 1.4.6
 ==================================================
